# opencircle

./: .env.example  .releaserc.js  AGENTS.md  LICENSE.md  Makefile  README.md  biome.json  docker-compose.dev.yaml  docker-compose.yml  package.json  pnpm-lock.yaml
.husky/: pre-commit
apps/api/: moon.yml  pyproject.toml
apps/api/alembic/versions/: 1a2ec6143542_adding_is_pinned_status.py  29b8bc6cd142_adding_appsettings_model.py  516d180bb1a9_adding_resources_for_channels.py  53f3e669b89e_adding_poll_model.py  849e3d83ebe3_add_password_reset_table.py  af3b29df0a5e_adding_poll_to_posttype_enum.py  b7747977e0fd_adding_usersettings.py  eb7f57b7c9ab_adding_user_socials.py
apps/api/src/: main.py
apps/api/src/api/account/: api.py  serializer.py
apps/api/src/api/appsettings/: api.py
apps/api/src/api/auth/: api.py  serializer.py
apps/api/src/api/channels/: api.py
apps/api/src/api/courses/: api.py
apps/api/src/api/invite_code/: api.py
apps/api/src/api/notifications/: api.py
apps/api/src/api/poll/: api.py  serializer.py
apps/api/src/api/post/: api.py  serializer.py
apps/api/src/api/reaction/: api.py
apps/api/src/api/resources/: api.py  serializer.py
apps/api/src/api/user/: api.py  serializer.py
apps/api/src/core/: settings.py
apps/api/src/database/: models.py
apps/api/src/modules/appsettings/: appsettings_methods.py
apps/api/tests/: test_account.py  test_appsettings.py  test_article.py  test_channels.py  test_courses.py  test_extras.py  test_invite_code.py  test_notifications.py  test_post.py  test_reaction.py  test_user.py
docs/: README.md  (+4 more)
(+163 files in other folders)
